--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+cx-Freeze==6.0
+dateparser==0.7.2
 et-xmlfile==1.0.1
 jdcal==1.4.1
 lxml==4.4.1
 openpyxl==2.6.3
-dateparser==0.7.2
+python-dateutil==2.8.1
+pytz==2019.3
+regex==2019.11.1
+six==1.13.0
 tqdm==4.36.1
+tzlocal==2.0.0
